Update Swagger Users
